# auto-click

./: .gitignore  Cargo.toml  README.md  Trunk.toml  codebook.toml  flake.nix  index.html  package-lock.json  package.json  styles.generated.css  tailwind.config.js
.zed/: settings.json
src/: app.rs  main.rs  tauri.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  modes.rs  mouse.rs
src-tauri/src/engine/: click_engine.rs
src/api/: mouse.rs
src/hooks/: mouse.rs
